--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <script>
         function openGame() {
             var win = window.open()
-            var url = "https://example.com"
+            var url = "https://originallityy.github.io/aa/geam.html"
             var iframe = win.document.createElement('iframe')
             iframe.style.width = "100%";
             iframe.style.height = "100%";
