--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <button>Fullscreen</button>
     <script>
       var urlObj = new window.URL(window.location.href);
-      var url = "https://originallityy.github.io/aa/geam.html"; //this is the link, replace it with your own
+      var url = "https://studio.penguinmod.com"; //this is the link, replace it with your own
       if (url) {
         var win;
  
